# NNS-core

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  notify-python.yml  sync-from-nns-r.yml
docs/: r-source-sync.md
include/nns/: fast_lm.hpp  nns.hpp  numerics.hpp  partial_moments.hpp  partition.hpp  stochastic_dominance.hpp
original_src/: NNS_dep.cpp  NNS_distance.cpp  NNS_part.cpp  NNS_seas.cpp  SD.cpp  central_tendencies.cpp  fast_lm.cpp  internal_functions.cpp  partial_moments.cpp  stoch_sup.cpp
scripts/: hash_r_src.py  inspect_r_src_update.py  run_fidelity.py  sync_adapter.py
src/: central_tendencies.cpp  dependence.cpp  distance.cpp  fast_lm.cpp  internal_functions.cpp  numerics.cpp  partial_moments.cpp  partition.cpp  stochastic_dominance.cpp
sync/: last_r_src_inspection.md  last_sync_report.md  nns_r_source.json  r_src_map.json
tests/cpp/: CMakeLists.txt  smoke_partial_moments.cpp
tests/fidelity/: CMakeLists.txt  generate_truth.R  nns_eval.cpp
